# aira

./: .cursorignore  .gitignore  .gitignore_summary.md  GITIGNORE_INFO.md  README.md  install_desktop.sh  install_desktop_enhanced.sh  install_system_deps.sh  main.py  pyproject.toml  run_desktop.py  run_desktop_enhanced.py  run_monitor.py
aira/: __init__.py
aira/asr/: __init__.py  base.py  gateway.py
aira/asr/providers/: azure.py  (+4 more)
aira/avatar/: __init__.py  controller.py
aira/core/: config.py  http.py  logging.py  tokenizer.py
aira/desktop/: __init__.py  app.py  client.py  main.py  media_handler.py  storage.py  themes.py
aira/dialogue/: orchestrator.py
aira/memory/: history.py  repository.py  service.py  vector_store.py
aira/models/: __init__.py  cot_embedding.py  cot_wrapper.py  gateway.py
aira/monitor/: __init__.py  server.py
aira/persona/: __init__.py  evolution.py
aira/social/: __init__.py  multi_agent.py
aira/stats/: tracker.py
aira/tools/: registry.py  runner.py
aira/translation/: __init__.py  translator.py
aira/tts/: __init__.py  base.py  gateway.py  language_detector.py
aira/vision/: __init__.py  cognition.py
config/: aira.toml  mcp_servers.json  tools.toml
config/profiles/: aira.toml  dark.toml  otaku.toml  straight.toml  tsundere.toml
docs/: CHANGELOG_COT.md  architecture.md  cot_guide.md  cot_quickstart.md  desktop_guide.md  persona_design.md
examples/: cot_example.py  quick_cot_test.py
tests/: test_cli_api.py  test_config.py  test_cot_embedding.py  test_cot_wrapper.py  test_llm_adapters.py  test_models.py  test_tools.py
(+54 files in other folders)
